# FluxLab

./: .gitignore  .license-header.txt  .pre-commit-config.yaml  README.md  main.py  pyproject.toml
.github/workflows/: tests.yml
controller/: __init__.py
model/: __init__.py
tests/: __init__.py  conftest.py  placeholder_test.py
tests/controller/: __init__.py
tests/model/: __init__.py
tests/view/: __init__.py
view/: __init__.py
view/ui/: mainwindow.ui
